--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-:root {
-  --primary-color: rgb(17, 86, 102);
-  --primary-color-darker: rgb(9, 48, 56);
-}
-
 * {
   box-sizing: border-box;
   outline: 0;
 }
-
 body{
     background-color: rgb(42, 43, 44);
     display: flex;
@@ -19,11 +13,6 @@ body{
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-h1{
-  line-height: 50px;
-}
-
 .container{
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(15px);
@@ -37,20 +26,6 @@ h1{
     justify-content: center;
     flex-direction: column;
 }
-
-.form{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 20px;
-}
-
-.form input{
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-}
-
 button{
     padding: 10px;
     border-radius: 5px;
@@ -61,18 +36,9 @@ button{
     transition: 0.5s;
     cursor: pointer;
 }
-
 button:hover{
     background-color: #007acc;
 }
-
-.time{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  gap: 15px;
-}
-
 .container-time{
     background: rgba(255, 255, 255, 0.1);
     height: 100px;
@@ -86,11 +52,9 @@ button:hover{
     justify-content: center;
     align-items: center;
 }
-
-.container-time p, h1{
+.container-time h1{
   margin: 0;
 }
-
 .control{
   display: flex;
   flex-direction: row;
